@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-10-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-24T00:00:00Z",
       "count": 1,
@@ -36,6 +31,11 @@
       "timestamp": "2023-11-03T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-06T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
